syntax = "proto3";

package file;

service FileService {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse) {}
  rpc UploadMultipleFile(UploadMultipleFileRequest) returns (UploadMultipleFileResponse) {}
  rpc GetSignedURL(GetSignedURLRequest) returns (GetSignedURLResponse) {}
  rpc GetSportAreaImageURL(GetSportAreaImageURLRequest) returns (GetSportAreaImageURLResponse) {}
}

message ImageData {
  string filename = 1;
  bytes data = 2;
}

message ImageURL {
  string url = 1;
  string filename = 2;
}

message UploadFileRequest {
  string filename = 1;
  bytes data = 2;
  string userId = 4;
}

message UploadFileResponse {
  string url = 1;
  string filename= 2;
}

message UploadMultipleFileRequest {
  repeated ImageData images = 1;
  string userId = 2;
}

message UploadMultipleFileResponse {
  repeated ImageURL imageUrls = 1; 
}

message GetSignedURLRequest {
  string filename = 1;
  string userId = 2;
}

message GetSignedURLResponse {
  string url = 1;
}

message GetSportAreaImageURLRequest {
  repeated string filenames = 1;
}

message GetSportAreaImageURLResponse {
  repeated ImageURL imageUrls = 1;
}